--- a/src/style.css
+++ b/src/style.css
@@ -2,3 +2,66 @@
     padding: 0;
     margin: 0;
 }
+
+@font-face {
+    font-family: stencil;
+    src: url(./assets/StardosStencil-Bold.woff);
+}
+
+body {
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    grid-template-rows: 2fr 20fr 1fr;
+}
+
+.header {
+    grid-row: 1 span 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.7vw;
+    font-weight: 300;
+}
+
+.header h1 {
+    font-family: stencil, Arial, Helvetica;
+    text-align: center;
+}
+
+.main {
+    grid-row: 2 span 1;
+    border: 1px solid black;
+    display: grid;
+    grid-template-rows: 4fr 1fr;
+}
+
+.boards {
+    border: 1px solid black;
+    grid-row: 1 span 1;
+    display: flex;
+    justify-content: center;
+}
+
+.left-panel {
+    border: 1px solid black;
+    flex: 1;
+}
+
+.right-panel {
+    border: 1px solid black;
+    flex: 1;
+}
+
+.whitespace {
+    border: 1px solid black;
+    grid-row: 2 span 1;
+}
+
+.footer {
+    grid-row: 3 span 1;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
