--- a/src/style.css
+++ b/src/style.css
@@ -142,6 +142,11 @@ button:hover {
     height: 2.5vw;
     width: 2.5vw;
     border: 1px solid black;
+    cursor: pointer;
+}
+
+.block:hover {
+    background-color: #f0f0f0;
 }
 
 .whitespace {
