change footer font

--- a/src/style.css
+++ b/src/style.css
@@ -159,4 +159,6 @@ button:hover {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: stencil, Arial;
+    font-size: 1.3vw;
 }
