--- a/src/style.css
+++ b/src/style.css
@@ -79,8 +79,7 @@ body {
     font-size: 1.5vw;
 }
 
-.randomize,
-.start-button {
+button {
     background: none;
     border: 1px solid black;
     font-family: stencil, Arial;
@@ -155,6 +154,9 @@ button:hover {
 
 .whitespace {
     grid-row: 2 span 1;
+    display: flex;
+    align-items: top;
+    justify-content: center;
 }
 
 .footer {
