--- a/src/style.css
+++ b/src/style.css
@@ -155,8 +155,10 @@ button:hover {
 .whitespace {
     grid-row: 2 span 1;
     display: flex;
-    align-items: top;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 0.5vw;
 }
 
 .footer {
